--- a/final porject.qmd
+++ b/final porject.qmd
@@ -102,37 +102,48 @@ merged_data.to_csv('/Users/hyeyoonsmacbook/Desktop/Github/final-project/data/mer
 # Scope 2: Indirect GHG emissions from the generation of purchased electricity consumed by the company.
 # Scope 3: Indirect GHG emissions that occur in the value chain, both upstream and downstream (e.g., supply chain emissions, product use, etc.).
 
-
 # 2020
 ```{python}
-scatter_plot_all = alt.Chart(merged_data).mark_circle(size=60).encode(
+# Load 2020 dataset
+file_2020 = '/Users/hyeyoonsmacbook/Desktop/Github/final-project/data/Public profit and emission database의 사본 - 2020.csv'
+data_2020 = pd.read_csv(file_2020)
+
+# Standardize column names for 2020
+data_2020_cleaned = standardize_columns(data_2020, year=2020)
+
+# Convert numeric columns for 2020
+numeric_cols_2020 = ['scope_1_ghg_emissions_tons_co₂e_2020', 'scope_2_emissions__tons_co₂e_2020', 'profit_2020']
+data_2020_cleaned = convert_numeric_columns(data_2020_cleaned, numeric_cols_2020)
+
+# Scatter Plot: Profit vs Scope 1, 2, 3 Emissions (2020)
+scatter_plot_2020 = alt.Chart(data_2020_cleaned).mark_circle(size=60).encode(
     x=alt.X('scope_1_ghg_emissions_tons_co₂e_2020:Q', title='Scope 1 GHG Emissions (tons CO2e)'),
     y=alt.Y('profit_2020:Q', title='Profit (Million USD)'),
     color=alt.Color('industry:N', title='Industry'),
-    tooltip=['company_name:N', 'industry:N', 'profit_2020:Q', 'scope_1_ghg_emissions_tons_co₂e_2020:Q', 
-             'scope_2_emissions__tons_co₂e_2020:Q', 'scope_3_emissions_tons_co₂e_2020:Q']
+    tooltip=['company_name:N', 'industry:N', 'profit_2020:Q', 
+             'scope_1_ghg_emissions_tons_co₂e_2020:Q', 'scope_2_emissions__tons_co₂e_2020:Q']
 ).properties(
-    title="Profit vs. Scope 1, 2, 3 Emissions (2020)",
+    title="Profit vs. Scope 1, 2 Emissions (2020)",
     width=600,
     height=400
 )
 
-scatter_plot_all.show()
-bar_chart_all = alt.Chart(merged_data).mark_bar().encode(
+scatter_plot_2020.show()
+
+# Bar Chart: Total Scope 1, 2 Emissions by Industry (2020)
+bar_chart_2020 = alt.Chart(data_2020_cleaned).mark_bar().encode(
     x=alt.X('industry:N', title='Industry', sort='-y'),
     y=alt.Y('sum(scope_1_ghg_emissions_tons_co₂e_2020):Q', title='Total Scope 1 Emissions'),
     color=alt.Color('industry:N', legend=None),
-    tooltip=['industry:N', 'sum(scope_1_ghg_emissions_tons_co₂e_2020):Q', 'sum(scope_2_emissions__tons_co₂e_2020):Q', 'sum(scope_3_emissions_tons_co₂e_2020):Q']
+    tooltip=['industry:N', 'sum(scope_1_ghg_emissions_tons_co₂e_2020):Q', 
+             'sum(scope_2_emissions__tons_co₂e_2020):Q']
 ).properties(
-    title="Total Scope 1, 2, 3 Emissions by Industry (2020)",
+    title="Total Scope 1, 2 Emissions by Industry (2020)",
     width=600,
     height=400
 )
 
-bar_chart_all.show()
-
-merged_data['total_scope_1_2_emissions'] = merged_data['scope_1_ghg_emissions_tons_co₂e_2020'] + merged_data['scope_2_emissions__tons_co₂e_2020']
-
+bar_chart_2020.show()
 ```
 
 # 2021
